@@ -15,8 +15,8 @@
 	</description>
 
 	<properties>
-		<compileSource>1.8</compileSource>
-		<compileTarget>11</compileTarget>
+		<compileSource>17</compileSource>
+		<compileTarget>21</compileTarget>
 		<svnkitVersion>1.7.4-v1</svnkitVersion>
 		<aonCoreLibsVersion>8.112</aonCoreLibsVersion>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
@@ -26,6 +26,7 @@
 		<jasperreportsMavenPluginArtifact>aon-maven-plugin</jasperreportsMavenPluginArtifact>
 		<jasperreportsMavenPluginVersion>8.2-SNAPSHOT</jasperreportsMavenPluginVersion>
 		<junitVersion>4.13.2</junitVersion>
+                <tomcat-version>10.1.19</tomcat-version>
 	</properties>
 
 	<modules>
@@ -177,9 +178,6 @@
 		<module>aon-in-payroll</module>
 		<module>aon-in-pdf</module>
 
-		
-		<module>aon-jasper-report</module>
-
 		<!-- JS MODULES -->
 		<module>aon-js-payroll</module>
 
@@ -234,7 +232,6 @@
 		
 		<!-- WEB MODULES -->
 		<module>aon-web-aio</module>
-		<!--module>aon-micro-services</module-->
 		<module>aon-solutions</module>
 
 
@@ -464,6 +461,10 @@
 					<source>${compileSource}</source>
 					<target>${compileTarget}</target>
 					<encoding>ISO-8859-1</encoding>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.net.www.protocol.jar=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
@@ -601,7 +602,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>3.6.4</version>
+				<version>3.9.0</version>
 			</plugin>
 		</plugins>
 	</build>
